package(deps): remove aurelia-i18n depenency

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aurelia-security",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "A plugin for Aurelia based projects.",
   "keywords": [
     "aurelia",
@@ -24,13 +24,12 @@
   "dependencies": {
     "aurelia-dependency-injection": "^1.0.0-rc.1.0.0",
     "aurelia-event-aggregator": "^1.0.0-rc.1.0.0",
-    "aurelia-framework": "^1.0.0-rc.1.0.0",
+    "aurelia-framework": "^1.0.0-rc.1.0.1",
     "aurelia-http-client": "^1.0.0-rc.1.0.0",
     "aurelia-http-utils": "^0.2.0",
-    "aurelia-i18n": "^1.0.0-rc.1.0.0",
     "aurelia-path": "^1.0.0-rc.1.0.0",
     "aurelia-router": "^1.0.0-rc.1.0.0",
-    "aurelia-storage": "^0.2.0"
+    "aurelia-storage": "^0.2.1"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.9.0",
@@ -38,11 +37,12 @@
     "del": "^2.2.1",
     "gulp": "^3.9.1",
     "gulp-jasmine": "^2.4.0",
-    "gulp-tsb": "^1.10.4",
+    "gulp-typescript": "^2.13.6",
     "jasmine": "^2.4.1",
     "jasmine-reporters": "^2.2.0",
-    "run-sequence": "^1.2.1",
-    "typescript": "^1.8.10",
+    "merge2": "^1.0.2",
+    "run-sequence": "^1.2.2",
+    "typescript": "^2.0.0-dev.20160707",
     "vinyl-paths": "^2.1.0"
   }
 }
