--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,14 +3,10 @@
     "rootDir": "src",
     "outDir": "dist",
     "target": "es5",
-    "lib": ["es2015", "dom"],
-    "sourceMap": true,
+    "lib": [ "es2015", "dom" ],
     "declaration": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
   },
-  "compileOnSave": false,
-  "exclude": [
-    "node_modules"
-  ]
+  "compileOnSave": false
 }
