--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,13 @@
     "rootDir": "src",
     "outDir": "dist",
     "target": "es5",
-    "lib": [ "es2015", "dom" ],
+    "lib": ["es2015", "dom"],
     "declaration": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
   },
+  "exclude": [
+    "node_modules"
+  ],
   "compileOnSave": false
 }
